update nginx config

--- a/ansible/nginx.conf
+++ b/ansible/nginx.conf
@@ -1,17 +1,17 @@
 # This file goes into /etc/nginx/sites-available/dbworkbench
 # ssl based on https://www.digitalocean.com/community/tutorials/how-to-create-an-ssl-certificate-on-nginx-for-ubuntu-14-04
 
-# redirect www.dbworkbench.com => dbworkbench.com
+# redirect www.databaseworkbench.com => databaseworkbench.com
 server {
     listen          80;
-    server_name     www.dbworkbench.com;
+    server_name     www.databaseworkbench.com;
 
-    return 301 $scheme://dbworkbench.com$request_uri;
+    return 301 $scheme://databaseworkbench.com$request_uri;
 }
 
 server {
     listen          80;
-    server_name     dbworkbench.com;
+    server_name     databaseworkbench.com;
 
     access_log      /var/log/nginx/dbworkbench/access.log;
     error_log       /var/log/nginx/dbworkbench/error.log;
