--- a/ansible/initial-setup.yml
+++ b/ansible/initial-setup.yml
@@ -12,7 +12,7 @@
       lineinfile: dest=/etc/sudoers state=present regexp='^%dbworkbench' line='%dbworkbench ALL=(ALL) NOPASSWD:ALL'
     - name: create user's .ssh directory
       file: path=/home/dbworkbench/.ssh state=directory owner=dbworkbench group=dbworkbench mode=0755
-    - name: copy existing ssh key
+    - name: copy ssh key
       copy: src=dbworkbench_rsa.pub dest=/home/dbworkbench/.ssh/authorized_keys
     - name: configure authorized_keys
       file: path=/home/dbworkbench/.ssh/authorized_keys mode=0644 owner=dbworkbench group=dbworkbench
