--- a/ansible/initial-setup.yml
+++ b/ansible/initial-setup.yml
@@ -28,8 +28,12 @@
     - name: create directory for nginx certificates
       file: >
         path=/etc/nginx/ssl/ state=directory mode=0755
+    - name: copy nginx certificate
+      copy: src=www.dbworkbench.com.chained.crt dest=/etc/nginx/ssl/www.dbworkbench.com.chained.crt
+    - name: copy nginx key
+      copy: src=www.dbworkbench.com.key dest=/etc/nginx/ssl/www.dbworkbench.com.key
     - name: copy nginx config file
-      copy: src=nginx.conf dest=/etc/nginx/sites-available/dbworkbench
+      copy: src=nginx.conf.ssl dest=/etc/nginx/sites-available/dbworkbench
     - name: enable website
       file: >
         dest=/etc/nginx/sites-enabled/dbworkbench
