--- a/ansible/initial-setup.yml
+++ b/ansible/initial-setup.yml
@@ -17,11 +17,11 @@
     - name: configure authorized_keys
       file: path=/home/dbworkbench/.ssh/authorized_keys mode=0644 owner=dbworkbench group=dbworkbench
     - name: install nginx
-      apt: name=nginx state=latest update_cache=yes
+      apt: name=nginx state=latest update_cache=yes cache_valid_time=120
     - name: install unzip
-      apt: name=unzip state=latest update_cache=yes
+      apt: name=unzip state=latest update_cache=yes cache_valid_time=120
     - name: install tar
-      apt: name=tar state=latest update_cache=yes
+      apt: name=tar state=latest update_cache=yes cache_valid_time=120
     - name: create directory for nginx logs
       file: >
         path=/var/log/nginx/dbworkbench/ state=directory mode=0755
