increase open file limit

--- a/ansible/initial-setup.yml
+++ b/ansible/initial-setup.yml
@@ -10,6 +10,14 @@
       user: name=dbworkbench group=dbworkbench groups="sudo" shell=/bin/bash
     - name: make user a sudoer
       lineinfile: dest=/etc/sudoers state=present regexp='^%dbworkbench' line='%dbworkbench ALL=(ALL) NOPASSWD:ALL'
+    - name: increase hard file limit
+      lineinfile: dest=/etc/security/limits.conf state=present line="dbworkbench hard nofile 375836"
+    - name: increase soft file limit
+      lineinfile: dest=/etc/security/limits.conf state=present line="dbworkbench soft nofile 375836"
+    - name: increse file limit
+      lineinfile: dest=/etc/pam.d/common-session state=present line="session required pam_limits.so"
+    - name: increse file limit 2
+      lineinfile: dest=/etc/pam.d/common-session-noninteractive state=present line="session required pam_limits.so"
     - name: create user's .ssh directory
       file: path=/home/dbworkbench/.ssh state=directory owner=dbworkbench group=dbworkbench mode=0755
     - name: copy ssh key
