--- a/ansible/initial-setup.yml
+++ b/ansible/initial-setup.yml
@@ -61,3 +61,9 @@
         state=link
     - name: restart nginx
       service: name=nginx state=restarted
+    - name: copy postfres config file
+      copy: src=postgresql.conf dest=/etc/postgresql/9.4/main/postgresql.conf
+    - name: chown postgres config file
+      command: chown postgres:postgres /etc/postgresql/9.4/main/postgresql.conf
+    - name: restart postgres
+      service: name=postgresql state=restarted
