run go vet and compile tests

--- a/wercker.yml
+++ b/wercker.yml
@@ -1,7 +1,10 @@
 box: wercker/golang
-# Build definition
+
+services:
+  - wercker/postgresql
+
+
 build:
-  # The steps that will be executed on build
   steps:
     # Sets the go workspace and places you package
     # at the right place in the workspace tree
@@ -15,14 +18,12 @@ build:
           go version
           go get -t ./...
 
-    # Build the project
     - script:
         name: go build
         code: |
           go build ./...
 
-    # Test the project
     - script:
         name: go test
         code: |
-          go test ./...
+          go test -v .
