set versions on dependencies

--- a/package.json
+++ b/package.json
@@ -1,20 +1,24 @@
 {
   "name" : "dbworkbench",
-  "dependencies" : {
-    "react-tools": "*",
-    "gulp": "*",
-    "gulp-autoprefixer": "*",
-    "gulp-rename": "*",
-    "gulp-concat": "*",
-    "gulp-uglify": "*",
-    "gulp-react": "*",
-    "gulp-html-replace": "*",
-    "vinyl-source-stream": "*",
-    "browserify": "*",
-    "watchify": "*",
-    "reactify": "*",
-    "gulp-streamify": "*",
-    "exorcist": "*"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/kjk/dbworkbench"
   },
-  "version" : "0.0.0"
+  "dependencies" : {
+    "browserify": "10.2.1",
+    "exorcist": "0.4.0",
+    "gulp": "3.8.11",
+    "gulp-autoprefixer": "2.3.0",
+    "gulp-concat": "2.5.2",
+    "gulp-html-replace": "1.4.5",
+    "gulp-react": "3.0.1",
+    "gulp-rename": "1.2.2",
+    "gulp-streamify": "0.0.5",
+    "gulp-uglify": "1.2.0",
+    "react-tools": "0.13.3",
+    "reactify": "1.1.1",
+    "vinyl-source-stream": "1.1.0",
+    "watchify": "3.2.1"
+  },
+  "version" : "0.0.1"
 }
