--- a/ansible/demodb-initial-setup.yml
+++ b/ansible/demodb-initial-setup.yml
@@ -39,3 +39,5 @@
       apt: name=tar state=latest update_cache=yes cache_valid_time=120
     - name: install tmux
       apt: name=tmux state=latest update_cache=yes cache_valid_time=120
+    - name: install 7zip
+      apt: name=p7zip-full state=latest update_cache=yes cache_valid_time=120
