--- a/ansible/demodb-initial-setup.yml
+++ b/ansible/demodb-initial-setup.yml
@@ -44,6 +44,9 @@
     - name: copy postgres config file
       copy: src=demodb-postgresql.conf dest=/etc/postgresql/9.3/main/postgresql.conf owner=postgres group=postgres mode=0644
       register: pgconfig
+    - name: copy postgres access config file
+      copy: src=demodb-pg_hba.conf dest=/etc/postgresql/9.3/main/pg_hba.conf owner=postgres group=postgres mode=0644
+      register: pgconfig2
     - name: restart postgres
       service: name=postgresql state=restarted
-      when: pgconfig.changed
+      when: pgconfig.changed or pgconfig2.changed
