--- a/ansible/initial-setup.yml
+++ b/ansible/initial-setup.yml
@@ -29,20 +29,18 @@
       copy: src=dbworkbench_rsa.pub dest=/home/dbworkbench/.ssh/authorized_keys
     - name: configure authorized_keys
       file: path=/home/dbworkbench/.ssh/authorized_keys mode=0644 owner=dbworkbench group=dbworkbench
-    - name: install nginx
-      apt: name=nginx state=latest update_cache=yes cache_valid_time=120
-    - name: install postgres
-      apt: name=postgresql-9.4 state=latest update_cache=yes cache_valid_time=120
-    - name: install postgres hstore extension
-      apt: name=postgresql-contrib-9.4 state=latest update_cache=yes cache_valid_time=120
+    - name: install desired software
+      apt: name={{ item }} state=latest update_cache=yes cache_valid_time=120
+      with_items:
+        - unzip
+        - tar
+        - nginx
+        - postgresql
+        - postgresql-contrib
     - script: postgres_setup.sh creates=/var/lib/postgresql/db_inited
       become: yes
       become_method: sudo
       become_user: postgres
-    - name: install unzip
-      apt: name=unzip state=latest update_cache=yes cache_valid_time=120
-    - name: install tar
-      apt: name=tar state=latest update_cache=yes cache_valid_time=120
     - name: create directory for nginx logs
       file: >
         path=/var/log/nginx/dbworkbench/ state=directory mode=0755
@@ -65,9 +63,6 @@
     - name: copy postgres config file
       copy: src=postgresql.conf dest=/etc/postgresql/9.4/main/postgresql.conf owner=postgres group=postgres mode=0644
       register: pgconfig
-    - name: copy ppostgres config file
-      copy: src=postgresql.conf dest=/etc/postgresql/9.4/main/postgresql.conf owner=postgres group=postgres mode=0644
-      register: pgconfig2
     - name: restart postgres
       service: name=postgresql state=restarted
-      when: pgconfig.changed or pgconfig2.chagned
+      when: pgconfig.changed
