--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,5 @@ s/dist
 node_modules
 cmd/import_stack_overflow/data/
 cmd/import_stack_overflow/import_stack_overflow
+mac-client/dbworkbench.xcodeproj/xcuserdata/
+mac-client/dbworkbench.xcodeproj/project.xcworkspace/xcuserdata/
