--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ cmd/import_stack_overflow/data/
 cmd/import_stack_overflow/import_stack_overflow
 mac-client/dbworkbench.xcodeproj/xcuserdata/
 mac-client/dbworkbench.xcodeproj/project.xcworkspace/xcuserdata/
+win/DatabaseWorkbench/obj/
