--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-uglify": "1.5.1",
     "react-tools": "0.13.3",
     "reactify": "1.1.1",
+    "underscore": "1.8.3",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.6.1"
   },
