forgot to checkin s3.go and win.go

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ mac-client/dbworkbench.xcodeproj/xcuserdata/
 mac-client/dbworkbench.xcodeproj/project.xcworkspace/xcuserdata/
 win/DatabaseWorkbench/obj/
 .vs/
+cert.pfx
