ansible: show output from systemctl status

--- a/ansible/website-deploy/website-deploy-systemctl.yml
+++ b/ansible/website-deploy/website-deploy-systemctl.yml
@@ -55,3 +55,5 @@
   - name: show status
     command: systemctl status website
     sudo: yes
+    register: website_status
+  - debug: var=website_status.stdout_lines
