move some code to yepi utils

--- a/win/DatabaseWorkbench/DatabaseWorkbench.csproj
+++ b/win/DatabaseWorkbench/DatabaseWorkbench.csproj
@@ -86,6 +86,12 @@
   <ItemGroup>
     <Content Include="icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="ext\yepi\Yepi.csproj">
+      <Project>{bc998f7c-a8d0-900d-51bd-76103dd30c0f}</Project>
+      <Name>Yepi</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
