--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name" : "dbworkbench",
+  "name": "dbworkbench",
   "repository": {
     "type": "git",
     "url": "https://github.com/kjk/dbworkbench"
   },
-  "dependencies" : {
+  "dependencies": {
     "browserify": "12.0.1",
     "exorcist": "0.4.0",
     "gulp": "3.9.0",
@@ -15,11 +15,15 @@
     "gulp-rename": "1.2.2",
     "gulp-streamify": "1.0.1",
     "gulp-uglify": "1.5.1",
+    "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.3",
+    "react-modal": "^0.6.1",
     "react-tools": "0.13.3",
     "reactify": "1.1.1",
     "underscore": "1.8.3",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.6.1"
   },
-  "version" : "0.0.1"
+  "version": "0.0.1"
 }
