--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "reactify": "1.1.1",
     "underscore": "1.8.3",
     "vinyl-source-stream": "1.1.0",
+    "vinyl-buffer": "1.0.0",
     "watchify": "3.6.1"
   },
   "version": "0.0.1"
