--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "browserify": "12.0.1",
+    "cssify": "^1.0.1",
     "exorcist": "0.4.0",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
@@ -19,11 +20,12 @@
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-modal": "^0.6.1",
+    "react-spinkit": "^1.1.4",
     "react-tools": "0.13.3",
     "reactify": "1.1.1",
     "underscore": "1.8.3",
-    "vinyl-source-stream": "1.1.0",
     "vinyl-buffer": "1.0.0",
+    "vinyl-source-stream": "1.1.0",
     "watchify": "3.6.1"
   },
   "version": "0.0.1"
