--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ tmp/
 cover.out
 dbworkbench
 dbworkbench_linux
-dbworkbench.exe
 ansible/*.zip
 s/js/bundle.js
 s/js/bundle.js.map
@@ -15,7 +14,6 @@ cmd/import_stack_overflow/import_stack_overflow
 mac/dbworkbench.xcodeproj/xcuserdata/
 mac/dbworkbench.xcodeproj/project.xcworkspace/xcuserdata/
 mac/build/
-mac/dbworkbench.exe
 win/DatabaseWorkbench/obj/
 .vs/
 cert.pfx
@@ -24,3 +22,5 @@ website/website
 website/website.exe
 resources.go
 dbworkbench.zip
+dbherohelper.exe
+mac/dbherohelper.exe
