--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,6 @@ website/website_linux
 website/website
 website/website.exe
 resources.go
-dbworkbench.zip
 dbherohelper.exe
 mac/dbherohelper.exe
+dbherohelper.zip
