--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "win/DatabaseWorkbench/ext/yepi"]
-	path = win/DatabaseWorkbench/ext/yepi
+[submodule "win/dbhero/ext/yepi"]
+	path = win/dbhero/ext/yepi
 	url = git@github.com:kjk/yepi-csharp.git
