--- a/win/dbhero/DBHero.csproj
+++ b/win/dbhero/DBHero.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{6C7BB82F-6A35-451C-822C-A85B9A1C40B9}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DatabaseWorkbench</RootNamespace>
-    <AssemblyName>DatabaseWorkbench</AssemblyName>
+    <RootNamespace>DbHero</RootNamespace>
+    <AssemblyName>DBHero</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
