--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.6.1"
   },
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0"
+  }
 }
