--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "browserify": "12.0.1",
+    "babel-polyfill": "6.3.14",
     "cssify": "^1.0.1",
     "exorcist": "0.4.0",
     "gulp": "3.9.0",
