ansible updates for dbhero website

--- a/ansible/demodb-server-setup/demodb-server-setup.yml
+++ b/ansible/demodb-server-setup/demodb-server-setup.yml
@@ -26,7 +26,7 @@
     - name: create users .ssh directory
       file: path=/home/demodb/.ssh state=directory owner=demodb group=demodb mode=0755
     - name: copy ssh key
-      copy: src=../dbworkbench_rsa.pub dest=/home/demodb/.ssh/authorized_keys
+      copy: src=../dbheroapp_rsa.pub dest=/home/demodb/.ssh/authorized_keys
     - name: configure authorized_keys
       file: path=/home/demodb/.ssh/authorized_keys mode=0644 owner=demodb group=demodb
     - name: install desired software
