--- a/ansible/website-server-setup/nginx.conf
+++ b/ansible/website-server-setup/nginx.conf
@@ -1,20 +1,20 @@
-# This file goes into /etc/nginx/sites-available/dbworkbench
+# This file goes into /etc/nginx/sites-available/dbheroapp
 # ssl based on https://www.digitalocean.com/community/tutorials/how-to-create-an-ssl-certificate-on-nginx-for-ubuntu-14-04
 
-# redirect www.databaseworkbench.com => databaseworkbench.com
+# redirect www.dbheroapp.com => dbheroapp.com
 server {
     listen          80;
-    server_name     www.databaseworkbench.com;
+    server_name     www.dbheroapp.com;
 
-    return 301 $scheme://databaseworkbench.com$request_uri;
+    return 301 $scheme://dbheroapp.com$request_uri;
 }
 
 server {
     listen          80;
-    server_name     databaseworkbench.com;
+    server_name     dbheroapp.com;
 
-    access_log      /var/log/nginx/dbworkbench/access.log;
-    error_log       /var/log/nginx/dbworkbench/error.log;
+    access_log      /var/log/nginx/dbheroapp/access.log;
+    error_log       /var/log/nginx/dbheroapp/error.log;
 
     location / {
         proxy_pass        http://localhost:5555;
