--- a/ansible/website-deploy/website-deploy.yml
+++ b/ansible/website-deploy/website-deploy.yml
@@ -1,6 +1,6 @@
 ---
-- name: deploy dbworkbench
-  hosts: dbworkbench
+- name: deploy dbheroapp
+  hosts: dbheroapp
   tasks:
   - name: get repo sha1
     local_action: command ../get-sha1.sh
@@ -22,30 +22,30 @@
     sudo: yes
   - name: create directory for the app
     file: >
-      path=/home/dbworkbench/www/app/{{ sha1.stdout }}
+      path=/home/dbheroapp/www/app/{{ sha1.stdout }}
       state=directory mode=0755
-      owner=dbworkbench group=dbworkbench
+      owner=dbheroapp group=dbheroapp
   - name: create directory for apps log
     file: >
-      path=/home/dbworkbench/www/data/log
+      path=/home/dbheroapp/www/data/log
       state=directory mode=0755
-      owner=dbworkbench group=dbworkbench
+      owner=dbheroapp group=dbheroapp
   - name: unzip files
-    unarchive: src={{ sha1.stdout }}.zip dest=/home/dbworkbench/www/app/{{ sha1.stdout }}
+    unarchive: src={{ sha1.stdout }}.zip dest=/home/dbheroapp/www/app/{{ sha1.stdout }}
   - name: stat current
-    stat: path=/home/dbworkbench/www/app/current
+    stat: path=/home/dbheroapp/www/app/current
     register: current_stat
   - name: remove old prev directory
-    file: path=/home/dbworkbench/www/app/prev state=absent
+    file: path=/home/dbheroapp/www/app/prev state=absent
   - name: rename current to prev
     command: mv current prev
     when: current_stat.stat.exists
     args:
-      chdir: /home/dbworkbench/www/app
+      chdir: /home/dbheroapp/www/app
   - name: symlink sha1 to current
     file: >
-      src=/home/dbworkbench/www/app/{{ sha1.stdout }}
-      dest=/home/dbworkbench/www/app/current
+      src=/home/dbheroapp/www/app/{{ sha1.stdout }}
+      dest=/home/dbheroapp/www/app/current
       state=link
   - name: start it
     command: systemctl start website
