--- a/win/dbhero/DBHero.csproj
+++ b/win/dbhero/DBHero.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DbHero</RootNamespace>
-    <AssemblyName>DBHero</AssemblyName>
+    <AssemblyName>dbHero</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
