--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ cmd/import_stack_overflow/import_stack_overflow
 mac/dbHero.xcodeproj/xcuserdata/
 mac/dbHero.xcodeproj/project.xcworkspace/xcuserdata/
 mac/build/
+mac/dbherohelper.exe
 win/dbhero/obj/
 .vs/
 cert.pfx
@@ -19,9 +20,8 @@ website/website_linux
 website/website
 website/website.exe
 resources.go
-dbherohelper.exe
-mac/dbherohelper.exe
 dbherohelper.zip
 .vscode/
 dbherohelper
 scripts/secrets.json
+win/dbhero/dbherohelper.exe
