--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "url": "https://github.com/kjk/dbworkbench"
   },
   "dependencies": {
-    "browserify": "12.0.1",
     "babel-polyfill": "6.3.14",
+    "browserify": "12.0.1",
     "cssify": "^1.0.1",
     "exorcist": "0.4.0",
     "gulp": "3.9.0",
@@ -22,6 +22,7 @@
     "react-dom": "^0.14.3",
     "react-modal": "^0.6.1",
     "react-tools": "0.13.3",
+    "reactable": "^0.12.0",
     "reactify": "1.1.1",
     "underscore": "1.8.3",
     "vinyl-buffer": "1.0.0",
