--- a/.eslintrc
+++ b/.eslintrc
@@ -7,9 +7,12 @@
     "rules": {
         "semi": 2
     },
-	"env": {
-		"browser": true,
-		"jquery": true,
-		"es6": true
-	}
+    "plugins": [
+        "eslint-plugin-react"
+    ],
+    "env": {
+        "browser": true,
+        "jquery": true,
+        "es6": true
+    }
 }
