--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "browserify": "12.0.1",
     "babel-polyfill": "6.3.14",
     "cssify": "^1.0.1",
+    "eslint": "^1.10.3",
+    "eslint-plugin-react": "^3.11.3",
     "exorcist": "0.4.0",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
