--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.11.3",
     "exorcist": "0.4.0",
+    "filesize": "^3.1.4",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-concat": "2.6.0",
