mac: more robust way to detect backend failed; remember size/location of the window

--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ node_modules
 cmd/import_stack_overflow/data/
 cmd/import_stack_overflow/import_stack_overflow
 mac/dbHero.xcodeproj/xcuserdata/
-mac/dbHero.xcodeproj/project.xcworkspace/xcuserdata/
+xcuserdata
 mac/build/
 mac/dbherohelper.exe
 win/dbhero/obj/
