--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "gulp-html-replace": "1.5.5",
     "gulp-react": "3.1.0",
     "gulp-rename": "1.2.2",
+    "gulp-sass": "2.1.1",
+    "gulp-sourcemaps" : "1.6.0",
     "gulp-streamify": "1.0.1",
     "gulp-uglify": "1.5.1",
+    "node-sass": "3.3.3",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
