--- a/package.json
+++ b/package.json
@@ -6,12 +6,23 @@
   },
   "dependencies": {
     "babel-polyfill": "6.3.14",
+    "filesize": "^3.1.4",
+    "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
+    "react-dom": "^0.14.3",
+    "react-modal": "^0.6.1",
+    "reactable": "^0.12.0",
+    "underscore": "1.8.3"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babelify": "^7.2.0",
     "browserify": "12.0.1",
     "cssify": "^1.0.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.11.3",
     "exorcist": "0.4.0",
-    "filesize": "^3.1.4",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-concat": "2.6.0",
@@ -23,22 +34,10 @@
     "gulp-streamify": "1.0.1",
     "gulp-uglify": "1.5.1",
     "node-sass": "3.4.2",
-    "react": "^0.14.3",
-    "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.3",
-    "react-modal": "^0.6.1",
-    "react-tools": "0.13.3",
-    "reactable": "^0.12.0",
     "reactify": "1.1.1",
-    "underscore": "1.8.3",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.6.1"
   },
-  "version": "0.0.1",
-  "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0"
-  }
+  "version": "0.0.1"
 }
