--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   },
   "dependencies": {
     "babel-polyfill": "6.3.14",
+    "codemirror": "^5.10.0",
     "filesize": "^3.1.4",
+    "keymaster": "^1.6.2",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
@@ -18,7 +20,6 @@
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "12.0.1",
-    "cssify": "^1.0.1",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.11.3",
     "exorcist": "0.4.0",
@@ -32,8 +33,6 @@
     "gulp-sourcemaps" : "1.6.0",
     "gulp-streamify": "1.0.1",
     "gulp-uglify": "1.5.1",
-    "node-sass": "3.4.2",
-    "reactify": "1.1.1",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "watchify": "3.6.1"
