--- a/.eslintrc
+++ b/.eslintrc
@@ -1,18 +1,25 @@
 {
-    "ecmaFeatures": {
-        "blockBindings": true,
-        "forOf": true,
-        "jsx": true
-    },
-    "rules": {
-        "semi": 2
-    },
-    "plugins": [
-        "eslint-plugin-react"
-    ],
-    "env": {
-        "browser": true,
-        "jquery": true,
-        "es6": true
-    }
+  "ecmaFeatures": {
+    "arrowFunctions": true,
+    "blockBindings": true,
+    "classes": true,
+    "destructuring": true,
+    "forOf": true,
+    "modules": true,
+    "restParams": true,
+    "spread": true,
+    "templateStrings": true,
+    "jsx": true
+  },
+  "rules": {
+    "semi": 2
+  },
+  "plugins": [
+    "eslint-plugin-react"
+  ],
+  "env": {
+    "browser": true,
+    "jquery": true,
+    "es6": true
+  }
 }
