--- a/win-cef/dbhero/DBHero.csproj
+++ b/win-cef/dbhero/DBHero.csproj
@@ -78,6 +78,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Backend.cs" />
     <Compile Include="Settings.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="Form1.cs">
