--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
-    "react-modal": "^0.6.1",
-    "underscore": "1.8.3"
+    "react-modal": "^0.6.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
