--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "babel-polyfill": "6.3.14",
     "codemirror": "^5.10.0",
     "filesize": "^3.1.4",
+    "jquery": "^2.1.1",
     "keymaster": "^1.6.2",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
