--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "babel-polyfill": "6.3.14",
     "codemirror": "^5.10.0",
     "filesize": "^3.1.4",
-    "jquery": "^2.1.1",
     "keymaster": "^1.6.2",
     "react": "^0.14.3",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
-    "react-modal": "^0.6.1"
+    "react-modal": "^0.6.1",
+    "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
