--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-modal": "^0.6.1",
+    "react-popover": "^0.4.3",
     "whatwg-fetch": "^0.10.1"
   },
   "devDependencies": {
@@ -30,7 +31,7 @@
     "gulp-react": "3.1.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.1.1",
-    "gulp-sourcemaps" : "1.6.0",
+    "gulp-sourcemaps": "1.6.0",
     "gulp-streamify": "1.0.1",
     "gulp-uglify": "1.5.1",
     "vinyl-buffer": "1.0.0",
