--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "filesize": "^3.1.4",
     "keymaster": "^1.6.2",
     "react": "^0.14.3",
+    "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-modal": "^0.6.1",
     "react-popover": "^0.4.3",
