add esformatter and re-format reactable.jsx

--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "12.0.1",
+    "esformatter": "^0.8.1",
+    "esformatter-jsx": "^4.1.0",
+    "esformatter-quotes": "^1.0.3",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.11.3",
     "exorcist": "0.4.0",
