--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "babel-preset-react": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "12.0.1",
+    "envify": "^3.4.0",
     "esformatter": "^0.8.1",
     "esformatter-jsx": "^4.1.0",
     "esformatter-quotes": "^1.0.3",
