--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "filesize": "^3.1.4",
     "keymaster": "^1.6.2",
     "react": "^0.14.3",
-    "react-alert": "^1.0.13",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-modal": "^0.6.1",
@@ -37,8 +36,10 @@
     "gulp-sass": "2.1.1",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.5.1",
+    "merge-stream": "^1.0.0",
     "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0"
+    "vinyl-source-stream": "1.1.0",
+    "react-addons-css-transition-group": "^0.14.2"
   },
   "version": "0.0.1"
 }
