--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-html-replace": "1.5.5",
+    "gulp-mocha": "^2.2.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.1.1",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.5.1",
+    "mocha": "^2.3.4",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0",
     "react-addons-css-transition-group": "^0.14.2"
