experiment: add jsx-no-bind eslint rule as it's bad for perf (https://github.com/yannickcr/eslint-plugin-react/blob/master/docs/rules/jsx-no-bind.md)

--- a/.eslintrc
+++ b/.eslintrc
@@ -12,7 +12,8 @@
     "jsx": true
   },
   "rules": {
-    "semi": 2
+    "semi": 2,
+    "react/jsx-no-bind": 1
   },
   "plugins": [
     "eslint-plugin-react"
