--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
+    "babel-plugin-undeclared-variables-check": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "12.0.1",
     "envify": "^3.4.0",
