--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "filesize": "^3.1.4",
     "keymaster": "^1.6.2",
     "react": "^0.14.3",
+    "react-addons-css-transition-group": "^0.14.2",
     "react-bootstrap": "^0.28.1",
     "react-dom": "^0.14.3",
     "react-modal": "^0.6.1",
@@ -19,7 +20,6 @@
   "devDependencies": {
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-plugin-undeclared-variables-check": "^6.3.13",
     "babelify": "^7.2.0",
     "browserify": "12.0.1",
     "envify": "^3.4.0",
@@ -39,8 +39,7 @@
     "gulp-uglify": "1.5.1",
     "mocha": "^2.3.4",
     "vinyl-buffer": "1.0.0",
-    "vinyl-source-stream": "1.1.0",
-    "react-addons-css-transition-group": "^0.14.2"
+    "vinyl-source-stream": "1.1.0"
   },
   "version": "0.0.1"
 }
