--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
   "rules": {
     "semi": 2,
     "react/jsx-boolean-value": 1,
+    "react/jsx-handler-names": 1,
     "react/jsx-key": 1,
     "react/jsx-no-duplicate-props": 1,
     "react/jsx-no-undef": 1,
@@ -23,15 +24,14 @@
     "react/no-did-update-set-state": 1,
     "react/no-direct-mutation-state": 1,
     "react/no-is-mounted": 1,
+    "react/no-string-refs": 1,
     "react/no-unknown-property": 1,
     "react/prefer-es6-class": 1,
     "react/react-in-jsx-scope": 1,
-    "react/self-closing-comp": 1,
-    "react/jsx-handler-names": 1
+    "react/self-closing-comp": 1
     //rules we might enfornce in the future
     //"react/jsx-no-bind": 1
     //"react/no-multi-comp": 1,
-    //"react/no-string-refs": 1,
     //"react/prop-types": 1,
     //"react/sort-comp": 1,
   },
