enable reawct/sort-comp eslint check

--- a/.eslintrc
+++ b/.eslintrc
@@ -29,11 +29,11 @@
     "react/no-unknown-property": 1,
     "react/prefer-es6-class": 1,
     "react/react-in-jsx-scope": 1,
-    "react/self-closing-comp": 1
+    "react/self-closing-comp": 1,
+    "react/sort-comp": 1
     //rules we might enfornce in the future
     //"react/jsx-no-bind": 1
     //"react/prop-types": 1,
-    //"react/sort-comp": 1,
   },
   "plugins": [
     "eslint-plugin-react"
