--- a/.eslintrc
+++ b/.eslintrc
@@ -28,7 +28,7 @@
     "react/no-string-refs": 1,
     "react/no-unknown-property": 1,
     "react/prefer-es6-class": 1,
-    //"react/prop-types": 1,
+    "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
     "react/self-closing-comp": 1,
     "react/sort-comp": 1
