--- a/package.json
+++ b/package.json
@@ -6,40 +6,41 @@
   },
   "dependencies": {
     "babel-polyfill": "6.3.14",
-    "codemirror": "^5.10.0",
-    "filesize": "^3.1.4",
-    "keymaster": "^1.6.2",
-    "react": "^0.14.3",
-    "react-addons-css-transition-group": "^0.14.2",
-    "react-bootstrap": "^0.28.1",
-    "react-dom": "^0.14.3",
-    "react-modal": "^0.6.1",
-    "react-popover": "^0.4.3",
-    "whatwg-fetch": "^0.10.1"
+    "codemirror": "5.10.0",
+    "filesize": "3.1.5",
+    "keymaster": "1.6.2",
+    "react": "0.14.6",
+    "react-addons-css-transition-group": "0.14.6",
+    "react-bootstrap": "0.28.2",
+    "react-dom": "0.14.6",
+    "react-modal": "0.6.1",
+    "react-popover": "0.4.4",
+    "whatwg-fetch": "0.10.1"
   },
   "devDependencies": {
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "babelify": "^7.2.0",
-    "browserify": "12.0.1",
-    "envify": "^3.4.0",
-    "esformatter": "^0.8.1",
-    "esformatter-jsx": "^4.1.0",
-    "esformatter-quotes": "^1.0.3",
-    "eslint": "^1.10.3",
-    "eslint-plugin-react": "^3.11.3",
+    "babel-preset-es2015": "6.3.13",
+    "babel-preset-react": "6.3.13",
+    "babelify": "7.2.0",
+    "browserify": "13.0.0",
+    "envify": "3.4.0",
+    "esformatter": "0.8.1",
+    "esformatter-jsx": "4.1.0",
+    "esformatter-quotes": "1.0.3",
+    "eslint": "1.10.3",
+    "eslint-plugin-react": "3.14.0",
     "exorcist": "0.4.0",
     "gulp": "3.9.0",
     "gulp-autoprefixer": "3.1.0",
     "gulp-html-replace": "1.5.5",
-    "gulp-mocha": "^2.2.0",
+    "gulp-mocha": "2.2.0",
     "gulp-rename": "1.2.2",
     "gulp-sass": "2.1.1",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.5.1",
-    "mocha": "^2.3.4",
+    "mocha": "2.3.4",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
+  "license" : "UNLICENSED",
   "version": "0.0.1"
 }
