move scripts/website_entrypoints.sh => website/website_entrypoints.sh

--- a/website/Dockerfile
+++ b/website/Dockerfile
@@ -5,7 +5,7 @@ RUN apk add --no-cache ca-certificates
 WORKDIR /app
 
 COPY dbheroapp_linux /app/
-COPY scripts/website_entrypoint.sh /app/entrypoint.sh
+COPY website_entrypoint.sh /app/entrypoint.sh
 COPY www /app/www/
 
 EXPOSE 80 443
