fix eslint config; fix lint issues

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,19 @@
 {
-  "ecmaFeatures": {
-    "arrowFunctions": true,
-    "blockBindings": true,
-    "classes": true,
-    "destructuring": true,
-    "forOf": true,
-    "modules": true,
-    "restParams": true,
-    "spread": true,
-    "templateStrings": true,
-    "jsx": true
+  "parserOptions": {
+    "ecmaVersion": 6,
+    "sourceType": "module",
+    "ecmaFeatures": {
+      "arrowFunctions": true,
+      "blockBindings": true,
+      "classes": true,
+      "destructuring": true,
+      "forOf": true,
+      "modules": true,
+      "restParams": true,
+      "spread": true,
+      "templateStrings": true,
+      "jsx": true
+    }
   },
   "rules": {
     "no-undef": 2,
