--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "codemirror": "5.25.0",
     "filesize": "3.5.6",
     "keymaster": "1.6.2",
+    "prop-types": "15.5.8",
     "react": "15.5.4",
     "react-addons-css-transition-group": "15.5.2",
     "react-bootstrap": "0.30.8",
@@ -41,6 +42,6 @@
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
-  "license" : "UNLICENSED",
+  "license": "UNLICENSED",
   "version": "0.0.1"
 }
