--- a/package.json
+++ b/package.json
@@ -24,9 +24,6 @@
     "babelify": "7.3.0",
     "browserify": "14.3.0",
     "envify": "4.0.0",
-    "esformatter": "0.10.0",
-    "esformatter-jsx": "8.0.0",
-    "esformatter-quotes": "1.1.0",
     "eslint": "3.19.0",
     "eslint-plugin-react": "6.10.3",
     "exorcist": "0.4.0",
@@ -39,6 +36,7 @@
     "gulp-sourcemaps": "2.6.0",
     "gulp-uglify": "2.1.2",
     "mocha": "3.2.0",
+    "prettier": "1.0.2",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
   },
